# infraology

./: .ghci  LICENCE  config  infraistory.cabal  infraology.cabal  record  stack.yaml
examples/: ObjectStorageCluster.hs
lib/Infrastructure/: Topology.hs  Types.hs
tests/: CheckProgram.hs  Explorations.hs  Snippet.hs
