cabal-version:       >= 1.10
name:                infraology
version:             0.1.1
synopsis:            Describing the evolution of infrastructure
license:             BSD3
license-file:        LICENCE
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2017 Operational Dynamics Consulting Pty Ltd, and Others
category:            Text
tested-with:         GHC == 8.0

build-type:          Simple

library
  default-language:  Haskell2010

  build-depends:     base,
                     unordered-containers,
                     text

  hs-source-dirs:    lib

  exposed-modules:   Infrastructure.Topology
  other-modules:     Infrastructure.Types

  ghc-options:       -O2
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto-top


test-suite           check
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

  build-depends:     base,
                     bytestring,
                     unordered-containers,
                     transformers,
                     mtl,
                     HUnit,
                     hspec,
                     text,
                     infraology

  hs-source-dirs:    tests
  main-is:           CheckProgram.hs
                      
executable           snippet
  default-language:  Haskell2010

  build-depends:     base,
                     bytestring,
                     unordered-containers,
                     text,
                     infraology

  ghc-options:       -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  hs-source-dirs:    tests
  main-is:           Snippet.hs
                      
-- vim: set tabstop=21 expandtab:
